--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div id="useDefault" class="btn">
                 <img src="https://www.kaggle.com/static/images/site-logo.svg" height="20" />
-                <span>Usar dataset "Trending Movies Dataset: 1990 to 2025" (Amit Kumar Singh)</span>
+                <span style="font-size: x-small;">Usar dataset "Trending Movies Dataset: 1990 to 2025" (Amit Kumar Singh)</span>
             </div>
             <div id="uploadData" class="btn">Quero usar meus próprios dados</div>
         </div>
@@ -60,6 +60,48 @@
 
         <div class="note-display" id="noteDisplay"></div>
         <canvas id="dataChart" width="600" height="300"></canvas>
+        <div>
+            <ul class="set">
+                <li note="C3" class="white e"></li>
+                <li note="Db3" class="black ds"></li>
+                <li note="D3" class="white d"></li>
+                <li note="Eb3" class="black cs"></li>
+                <li note="E3" class="white c"></li>
+                <li note="F3" class="white b"></li>
+                <li note="Gb3" class="black as"></li>
+                <li note="G3" class="white a"></li>
+                <li note="Ab3" class="black gs"></li>
+                <li note="A3" class="white g"></li>
+                <li note="Bb3" class="black fs"></li>
+                <li note="B3" class="white f"></li>   
+
+                <li note="C4" class="white e"></li>
+                <li note="Db4" class="black ds"></li>
+                <li note="D4" class="white d"></li>
+                <li note="Eb4" class="black cs"></li>
+                <li note="E4" class="white c"></li>
+                <li note="F4" class="white b"></li>
+                <li note="Gb4" class="black as"></li>
+                <li note="G4" class="white a"></li>
+                <li note="Ab4" class="black gs"></li>
+                <li note="A4" class="white g"></li>
+                <li note="Bb4" class="black fs"></li>
+                <li note="B4" class="white f"></li>
+                
+                <li note="C5" class="white e"></li>
+                <li note="Db5" class="black ds"></li>
+                <li note="D5" class="white d"></li>
+                <li note="Eb5" class="black cs"></li>
+                <li note="E5" class="white c"></li>
+                <li note="F5" class="white b"></li>
+                <li note="Gb5" class="black as"></li>
+                <li note="G5" class="white a"></li>
+                <li note="Bb5" class="black gs"></li>
+                <li note="A5" class="white g"></li>
+                <li note="Bb5" class="black fs"></li>
+                <li note="B5" class="white f"></li>
+            </ul>
+        </div>
     </section>
     <div class="links">
         <a href="https://www.linkedin.com/in/jo%C3%A3o-gabriel-corr%C3%AAa-da-silva-330887133/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16" fill="none"><path fill="#0A66C2" d="M12.225 12.225h-1.778V9.44c0-.664-.012-1.519-.925-1.519-.926 0-1.068.724-1.068 1.47v2.834H6.676V6.498h1.707v.783h.024c.348-.594.996-.95 1.684-.925 1.802 0 2.135 1.185 2.135 2.728l-.001 3.14zM4.67 5.715a1.037 1.037 0 01-1.032-1.031c0-.566.466-1.032 1.032-1.032.566 0 1.031.466 1.032 1.032 0 .566-.466 1.032-1.032 1.032zm.889 6.51h-1.78V6.498h1.78v5.727zM13.11 2H2.885A.88.88 0 002 2.866v10.268a.88.88 0 00.885.866h10.226a.882.882 0 00.889-.866V2.865a.88.88 0 00-.889-.864z"/></svg></a>
